# cosmctools

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
MCMC_Evidence/: Cobaya_wrapper.py
notebooks/: checking.ipynb  testing.ipynb
src/cosmctools/: __init__.py  model.py
src/cosmctools/mcevidence/: Cobaya_wrapper.py  MCEvidence.py
