[project]
name = "cosmctools"
version = "0.1.0"
description = "Tools library for extracting information from cosmological MCMC chains sampled with Cobaya."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.5",
    "flax>=0.10",
    "getdist>=1.7.5",
    "harmonic>=2.3",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "pandas>=3.0",
    "scipy>=1.17",
    "seaborn>=0.13",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
