[project]
name = "cosmctools"
version = "0.1.0"
description = "Tools library for extracting information from cosmological MCMC chains sampled with Cobaya."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.8",
    "getdist>=1.5",
    "harmonic>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
]

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"
